<resources>
    <!-- common -->
    <string name="app_name">다다음카페</string>
    <string name="loading">로딩중입니다.</string>
    <string name="uploading">업로드중입니다.</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="nofunction">미구현기능입니다.</string>
    <string name="separator" translatable="false">&#160;&#160;|&#160;&#160;</string>
    <string name="kakao_app_key" translatable="false">66ac8e8aa72f51d657e9feb64e61cb0f</string>
    <string name="alert_logout">로그아웃하시겠습니까?</string>
    <string name="alert_login">로그인 후 이용할 수 있습니다.\n로그인 하시겠습니까?</string>
    <string name="alert_positive">확인</string>
    <string name="alert_positive_login">로그인</string>
    <string name="alert_negative">취소</string>

    <!-- Splash Activity -->
    <string name="title_splash" translatable="false">cafe</string>
    <string name="desc_splash">모든 이야기의 시작\n다다음카페</string>

    <!-- SignSelect -->
    <string name="signup_signselect"><u>회원가입</u></string>
    <string name="daumsignin_signselect">Daum으로 로그인</string>
    <string name="kakaosignin_signselect">카카오계정으로 로그인</string>
    <string name="kakaodirectsignin_signselect">카카오계정 직접 입력</string>

    <!-- SIgnIn Activity -->
    <string name="type_email_signin">이메일 입력</string>
    <string name="type_pw_signin">비밀번호 입력</string>
    <string name="signin">로그인</string>
    <string name="autologin_signin">로그인 상태 유지</string>
    <string name="find_email">이메일 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="wrong_type_signin">입력한 형식이 올바르지 않습니다. 다시 입력해주세요.</string>
    <string name="success_signin">로그인에 성공하였습니다.</string>

    <!-- SignUp Activity -->
    <string name="signup_signup">회원가입</string>
    <string name="type_email_signup">이메일 입력</string>
    <string name="type_pw_signup">비밀번호 입력</string>
    <string name="type_pwcheck_signup">비밀번호 확인</string>
    <string name="type_name_signup">닉네임 입력</string>
    <string name="type_email_desc_signup">이메일 형식을 지켜주십시요. ex) abcd@daum.net</string>
    <string name="type_pw_desc_signup">비밀번호는 6~20자 이내로 작성해주세요.</string>
    <string name="type_pwcheck_desc_no_signup">비밀번호가 일치하지 않습니다.</string>
    <string name="type_pwcheck_desc_ok_signup">비밀번호가 일치합니다.</string>
    <string name="type_name_desc_signup">닉네임은 20자 이내로 작성해주세요.</string>

    <!-- SignOut Activity -->
    <string name="current_userid_signout">현재 로그인 중인 아이디</string>
    <string name="add_another_id_signout">+ 다른 아이디 추가</string>
    <string name="integrate_desc_signout">Daum 아이디를 카카오계정으로 통합하세요!</string>
    <string name="integrate_signout">통합하기</string>
    <string name="signout_signout">로그아웃</string>
    <string name="resign_signout">회원탈퇴</string>
    <string name="company_name_signout" translatable="false">ⓒ Kakao Corp.</string>
    <string name="contact_signout">고객센터</string>
    <string name="alert_resign">정말로 회원탈퇴하시겠습니까?\n탈퇴시 되돌릴 수 없습니다.</string>
    <string name="success_resign">회원탈퇴에 성공하였습니다.</string>

    <!-- Popular Fragment -->
    <string name="drawer_popular_now">실시간 인기글</string>
    <string name="main_popular_now">시, 인기글</string>
    <string name="drawer_popular_week">주간 인기글</string>
    <string name="drawer_popular_month">월간 인기글</string>
    <string name="drawer_popular_week_description">지난 4주동안의 인기글입니다.</string>
    <string name="drawer_popular_month_description">지난 6개월 동안의 인기글입니다.</string>
    <string name="drawer_popular_now_subtitle" translatable="false">TODAY</string>
    <string name="drawer_popular_week_subtitle" translatable="false">WEEKLY</string>
    <string name="drawer_popular_month_subtitle" translatable="false">MONTHLY</string>
    <string name="drawer_popular_now_description1">지금, </string>
    <string name="drawer_popular_now_description2">시의 인기글입니다.</string>

    <!-- MyCafe Cafe Fragment -->
    <string name="favorite_cafe_mycafe">즐겨찾는 카페</string>
    <string name="all_cafe_mycafe">내 전체 카페</string>
    <string name="edit_cafe_mycafe">편집</string>
    <string name="mycafe_mycafe">내 카페</string>
    <string name="cafe_mycafe">카페</string>
    <string name="board_mycafe">게시판</string>
    <string name="friend_mycafe">친구</string>
    <string name="bookmark_mycafe">북마크</string>

    <!-- MyCafe Category Fragment -->
    <string name="favorite_board_mycafe">즐겨찾는 게시판</string>

    <!-- MyCafe Notification Fragment -->
    <string name="mynoti_notification_mycafe">내 소식</string>
    <string name="cafeact_notification_mycafe">카페활동알림</string>
    <string name="newarticle_notification_mycafe">새글알림</string>
    <string name="postmail_notification_mycafe">쪽지알림</string>

    <!-- MyCafe Bookmark Fragment -->
    <string name="archive_bookmark_mycafe">보관함</string>

    <!-- Home Fragment -->
    <string name="cafe_home" translatable="false">cafe</string>

    <!-- Setting Fragment -->
    <string name="setting_setting">설정</string>
    <string name="login_info_setting">로그인 정보</string>
    <string name="update_info_setting">업데이트정보</string>
    <string name="update_info_subtitle_setting">현재 3.12.2</string>
    <string name="update_info_desc_setting">최신버전 사용 중</string>
    <string name="noti_set_setting">알림 설정</string>
    <string name="noti_check_setting">알림 수신 확인</string>
    <string name="write_setting">글쓰기 설정</string>
    <string name="read_setting">글읽기 설정</string>
    <string name="board_setting">게시판 설정</string>
    <string name="spam_setting">쪽지 차단 설정</string>
    <string name="start_page_setting">시작화면 설정</string>
    <string name="start_page_desc_setting">홈</string>
    <string name="start_tab_setting">내카페 기본탭 설정</string>
    <string name="start_tab_desc_setting">홈</string>
    <string name="theme_setting">카페 테마 설정</string>
    <string name="theme_desc_setting">블랙</string>
    <string name="language_setting">언어 설정</string>
    <string name="language_desc_setting">시스템 기본</string>
    <string name="lock_setting">암호 설정</string>
    <string name="lock_desc_setting">사용 안함</string>
    <string name="cache_setting">저장 데이터 관리</string>
    <string name="lab_setting">실험실</string>
    <string name="service_info_setting">서비스 정보</string>
    <string name="toast_update_info">"최신 버전입니다."</string>
    <string name="language_default_setting">시스템 기본</string>
    <string name="language_select_setting">언어 선택</string>
    <string name="signin_setting">로그인 하세요.</string>

    <!-- AddCafe Activity -->
    <string name="cafe_name_addcafe">카페 이름</string>
    <string name="addcafe_addcafe">카페 만들기</string>
    <string name="constraint1_addcafe">한글, 영문, 숫자, 기호만 입력해 주세요.</string>
    <string name="constraint2_addcafe">대소문자를 구분, (-), (.)을 사용해주세요.</string>
    <string name="cafe_name_count_addcafe" translatable="false">0/60</string>
    <string name="cafe_url_count_addcafe" translatable="false">0/20</string>
    <string name="cafe_url_addcafe">카페 주소</string>
    <string name="agreement_addcafe">개인정보보호 의무 동의</string>
    <string name="agreement_check_addcafe">카페지기의 개인정보보호 의무를 확인해주시기 바랍니다.</string>
    <string name="submit_addcafe">카페 만들기</string>
    <string name="success_addcafe">카페 생성에 성공하였습니다.</string>
    <string name="failure_addcafe">카페 생성에 실패하였습니다.\n잠시 후 다시 시도해주세요.</string>

    <!-- ArticleDetail Activity -->
    <string name="all_article_articledetail">전체글</string>
    <string name="comment_articledetail">댓글</string>
    <string name="write_comment_articledetail">댓글쓰기</string>
    <string name="prev_article_articledetail">이전</string>
    <string name="next_article_articledetail">다음</string>
    <string name="searching_articledetail">검색하기</string>
    <string name="search_articledetail">검색</string>
    <string name="share_articledetail">공유하기</string>
    <string name="home_articledetail">홈</string>
    <string name="admin_articledetail">관리</string>
    <string name="chat_articledetail">채팅</string>
    <string name="recent_board_articledetail">최근 방문 게시판</string>
    <string name="favorite_board_articledetail">즐겨찾는 게시판</string>
    <string name="all_board_articledetail">전체 게시판</string>

    <!-- Cafe Activity -->
    <string name="all_article_cafe">전체글</string>
    <string name="popular_article_cafe">인기글</string>
    <string name="searching_cafe" translatable="false">@string/searching_articledetail</string>
    <string name="write_article_cafe">글쓰기</string>
    <string name="refresh_cafe">새로고침</string>
    <string name="home_cafe">홈</string>
    <string name="admin_cafe">관리</string>
    <string name="chat_cafe">채팅</string>
    <string name="search_cafe">검색</string>
    <string name="recent_board_cafe">최근 방문 게시판</string>
    <string name="favorite_board_cafe">즐겨찾는 게시판</string>
    <string name="all_board_cafe">전체 게시판</string>

    <!-- MyPage Activity -->
    <string name="gender_age_mypage">성별/나이</string>
    <string name="visit_count_mypage">총 방문일</string>
    <string name="article_count_mypage">총 게시물</string>
    <string name="comment_count_mypage">총 댓글</string>
    <string name="register_date_mypage">카페가입</string>
    <string name="recent_visit_date_mypage">최종방문일</string>

    <!-- Write Activity -->
    <string name="write_write">글쓰기</string>
    <string name="submit_write">등록</string>
    <string name="save_write">임시저장</string>
    <string name="select_board_write">게시판 선택</string>
    <string name="title_hint_write">제목</string>
    <string name="contents_hint_write">내용</string>

    <!-- Chat Activity -->
    <string name="send_chat">전송</string>
    <string name="title_chat">채팅방</string>


</resources>
