<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".src.main.fragments.mycafe.addcafe.AddCafeActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/addcafe_addcafe"
        android:id="@+id/toolbar_addcafe"
        android:background="@android:color/white"
        android:elevation="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cafe_name_addcafe"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"/>

    <EditText
        android:id="@+id/et_cafe_name_addcafe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/background_edittext_red"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/constraint1_addcafe"
            android:layout_gravity="start"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_cafe_name_count_addcafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cafe_name_count_addcafe" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cafe_url_addcafe"
        android:textColor="@android:color/black"
        android:layout_marginHorizontal="16dp"/>

    <EditText
        android:id="@+id/et_cafe_url_addcafe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:autofillHints="cafe.daum.net/"
        android:background="@drawable/background_edittext_red"
        android:padding="8dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/constraint2_addcafe" />

        <TextView
            android:id="@+id/tv_cafe_url_count_addcafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/cafe_url_count_addcafe" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:paddingVertical="8dp"
        android:elevation="2dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/agreement_addcafe"
            android:paddingHorizontal="16dp"
            android:textColor="@android:color/black"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swt_agree_addcafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_light"
            android:paddingHorizontal="16dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="16dp"
        android:text="@string/agreement_check_addcafe" />


    <Button
        android:id="@+id/btn_addcafe_addcafe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/holo_red_light"
        android:text="@string/submit_addcafe"
        android:textColor="@android:color/white" />


</LinearLayout>