<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginEnd="?attr/actionBarSize"
    android:id="@+id/drawer_popular"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/drawer_item1_popular"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/drawer_popular_now"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="AM 02:00"
            android:textSize="10sp"
            android:textStyle="bold"
            android:scaleX="1.2"
            android:id="@+id/tv_current_hour_popular_drawer"
            android:letterSpacing="0.2"
            android:textColor="#EE3333"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="지금, 2시의 인기글입니다."
            android:id="@+id/tv_current_hour_desc_popular_drawer"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_item2_popular"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawer_popular_week"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawer_popular_week_subtitle"
            android:textSize="10sp"
            android:textStyle="bold"
            android:scaleX="1.2"
            android:letterSpacing="0.2"
            android:textColor="#33AAAA"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawer_popular_week_description"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/drawer_item3_popular"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawer_popular_month"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawer_popular_month_subtitle"
            android:textSize="10sp"
            android:letterSpacing="0.2"
            android:scaleX="1.2"
            android:textStyle="bold"
            android:textColor="#EE9933"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drawer_popular_month_description"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</LinearLayout>