<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".src.signselect.signout.SignOutActivity">

    <RelativeLayout
        android:id="@+id/header_signout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/white"
        android:elevation="2dp"
        android:paddingHorizontal="8dp">

        <ImageView
            android:id="@+id/iv_close_signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_chevron_left_black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginVertical="4dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            android:src="@drawable/daum_logo" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/background_signout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:text="@string/current_userid_signout"
            android:layout_marginTop="28dp"
            android:layout_marginHorizontal="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingVertical="16dp"
            android:paddingHorizontal="16dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/background_sqaure_border"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:adjustViewBounds="true"
                android:background="@drawable/background_round_grey"
                android:scaleType="centerInside"
                android:src="@drawable/logo_daum_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:id="@+id/tv_userid_signout"
                tools:text="UserId" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/integrate_desc_signout"
                android:textColor="@android:color/black"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/integrate_signout"
                android:textSize="12sp"
                android:id="@+id/tv_integrate_signout"
                android:textColor="@android:color/black"
                android:background="@drawable/background_yellow"
                android:layout_marginStart="6dp"/>
        </LinearLayout>



        <Button
            android:id="@+id/btn_signout_signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signout_signout"
            android:textStyle="bold"
            android:textSize="19sp"
            android:textColor="@android:color/white"
            android:background="@color/color_primary_sign"
            android:layout_marginBottom="32dp"
            android:layout_marginHorizontal="16dp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="1dp">

        <TextView
            android:id="@+id/tv_add_anotherid_signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_another_id_signout"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="28dp"
            android:textColor="#444444"
            android:layout_marginHorizontal="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name_signout"
            android:textSize="12sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            android:textSize="12sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_signout"
            android:textSize="12sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/tv_resign_signout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resign_signout"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>