<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/srl_mycafe_cafe"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:elevation="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/rl_list_first_mycafe_cafe"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@android:color/white"
                android:elevation="1dp">

                <TextView
                    android:id="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/favorite_cafe_mycafe"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_count_mycafes_cafe_mycafe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/textView2"
                    app:layout_constraintTop_toTopOf="@id/textView2"
                    app:layout_constraintBottom_toBottomOf="@id/textView2"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@+id/textView2"
                    tools:text="0"
                    android:textColor="@android:color/holo_red_light" />

                <TextView
                    android:id="@+id/tv_edit_cafe_mycafe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/edit_cafe_mycafe"
                    android:textColor="@android:color/black" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_list_favorite_mycafe_cafe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:itemCount="6"
                    tools:listitem="@layout/item_mycafe"
                    android:layout_marginTop="8dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_list_first_mycafe_cafe"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_list_first_mycafe_cafe"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/all_cafe_mycafe"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_count_allcafes_cafe_mycafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/textView5"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@id/textView5"
                android:layout_marginStart="4dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:layout_toEndOf="@+id/textView5"
                tools:text="10"
                android:textColor="@android:color/holo_red_light" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_mycafes_mycafe_cafe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="10"
                tools:listitem="@layout/item_mycafe" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
